v1.2.0/_sources/users-guide/index.rst.txt
.. ActivitySim documentation users guide

.. _userguide:

Users Guide
===========

The mission of the ActivitySim project is to create and maintain advanced, open-source,
activity-based travel behavior modeling software based on best software development
practices for distribution at no charge to the public.

The ActivitySim project is led by a consortium of Metropolitan Planning Organizations
(MPOs) and other transportation planning agencies, which provides technical direction
and resources to support project development. New member agencies are welcome to join
the consortium. All member agencies help make decisions about development priorities
and benefit from contributions of other agency partners.  Additional information about
the development and management of the ActivitySim is on the `project site <http://www.activitysim.org>`__.


Contents
--------

.. toctree::
   :maxdepth: 3

   ../gettingstarted
   cli-tools
   ../examples
   configuration
   ../cli
   ../estimation
   ../howitworks
